--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@swimlane/ngx-charts": "^20.3.1",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -31,6 +33,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
